[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bmst-social-agents"
version = "0.1.0"
description = "Multi-agent social media system for BMST — SCOUT, WRITER, CAROUSEL, REVISOR, PUBLISHER"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  "langgraph>=0.2.0",
  "langgraph-checkpoint-redis>=0.0.3",
  "langchain>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "anthropic>=0.40.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "redis>=5.0.0",
  "supabase>=2.0.0",
  "apscheduler>=3.10.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "langfuse>=2.0.0",
  "tavily-python>=0.3.0",
  "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
